--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,10 +18,10 @@
 @import "bootstrap";
 @import "bootstrap-sprockets";
 
-table.chatrooms {
+/*table.chatrooms {
   border: 2px solid #ff0020;
 }
-.chatrooms td {
+*/.chatrooms td {
   padding: 10px;
 }
 
