--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -3,10 +3,10 @@
   <%= @chatroom.name %>
 </p>
 
-<div data-behavior='messages'>
-  <% @chatroom.messages.order(:created_at).each do |message| %>
-  <div><strong><%= message.user.username%>:</strong> <%= message.body %></div>
-<% end %>
+<div data-behavior='messages' data-chatroom-id='<%= @chatroom.id %>'>
+  <% @messages.each do |message| %>
+    <%= render message %>
+  <% end %>
 </div>
 
 <%= form_for [@chatroom, Message.new] do |f| %>
