--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,13 +59,13 @@
           <h5>Chatrooms</h5>
           <ul>
             <% current_user.chatrooms.each do |chatroom| %>
-              <li><%= link_to chatroom.name, chatroom %></li>
+              <li><%= link_to chatroom.name, chatroom, data: {behavior: "chatroom-link", chatroom_id: chatroom.id} %></li>
               <% end %>
           </ul>
         <% end %>
       </div>
 
-    <div class="col-sm-10 col-sm-offset-2">
+    <div class="col-sm-8 col-sm-offset-2">
       <%= yield %>
     </div>
   </div>
